force-app/main/default/objects/ISBN__c/ISBN__c.object-meta.xml
<CustomObject>
    <description>Customer-provided information for registering ISBN.</description>
    <label>ISBN</label>
    <nameField>
        <displayFormat>ISBN-{000000}</displayFormat>
        <label>ISBN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISBNs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>