force-app/main/default/objects/ISBN__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Customer whom this ISBN has been assigned to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ISBNs</relationshipLabel>
    <relationshipName>ISBNs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>