force-app/main/default/objects/ISBN__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when ISBN has been assigned with Bowker</inlineHelpText>
    <label>ISBN Assigned</label>
    <type>Checkbox</type>
</CustomField>