force-app/main/default/objects/ISBN__c/fields/BiographyC1__c.field-meta.xml
<CustomField>
    <fullName>BiographyC1__c</fullName>
    <label>Biography</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>