force-app/main/default/objects/ISBN__c/fields/Copyright_Year__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Year__c</fullName>
    <label>Copyright Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>