force-app/main/default/objects/ISBN__c/fields/First_NameC1__c.field-meta.xml
<CustomField>
    <fullName>First_NameC1__c</fullName>
    <label>First Name</label>
    <type>TextArea</type>
</CustomField>