force-app/main/default/objects/ISBN__c/fields/First_NameC2__c.field-meta.xml
<CustomField>
    <fullName>First_NameC2__c</fullName>
    <label>First Name</label>
    <type>TextArea</type>
</CustomField>