force-app/main/default/objects/ISBN__c/fields/FunctionC1__c.field-meta.xml
<CustomField>
    <fullName>FunctionC1__c</fullName>
    <label>Function</label>
    <type>TextArea</type>
</CustomField>