force-app/main/default/objects/ISBN__c/fields/ISBN_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Identifier__c</fullName>
    <inlineHelpText>ISBN assigned through Bowker</inlineHelpText>
    <label>ISBN Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>