force-app/main/default/objects/ISBN__c/fields/Last_NameC1__c.field-meta.xml
<CustomField>
    <fullName>Last_NameC1__c</fullName>
    <label>Last Name</label>
    <type>TextArea</type>
</CustomField>