force-app/main/default/objects/ISBN__c/fields/Last_NameC2__c.field-meta.xml
<CustomField>
    <fullName>Last_NameC2__c</fullName>
    <label>Last Name</label>
    <type>TextArea</type>
</CustomField>