force-app/main/default/objects/ISBN__c/fields/Second_Genre__c.field-meta.xml
<CustomField>
    <fullName>Second_Genre__c</fullName>
    <label>Second Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre</valueSetName>
    </valueSet>
</CustomField>