force-app/main/default/objects/ISBN__c/fields/Set_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Set_Retail_Price__c</fullName>
    <label>Set Retail Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set Price</fullName>
            </value>
            <value>
                <fullName>No Set Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>