force-app/main/default/objects/ISBN__c/fields/Sticker_Price__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Price__c</fullName>
    <inlineHelpText>Price displayed on generated ISBN</inlineHelpText>
    <label>Sticker Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>