force-app/main/default/objects/ISBN__c/fields/SuffixC2__c.field-meta.xml
<CustomField>
    <fullName>SuffixC2__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>The First</fullName>
            </value>
            <value>
                <fullName>The Second</fullName>
            </value>
            <value>
                <fullName>The Third</fullName>
            </value>
            <value>
                <fullName>The Fourth</fullName>
            </value>
            <value>
                <fullName>The Fifth</fullName>
            </value>
            <value>
                <fullName>The Sixth</fullName>
            </value>
            <value>
                <fullName>The Seventh</fullName>
            </value>
            <value>
                <fullName>The Eighth</fullName>
            </value>
            <value>
                <fullName>The Ninth</fullName>
            </value>
            <value>
                <fullName>The Tenth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>