force-app/main/default/objects/ISBN__c/fields/Supplemental_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Barcode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplemental Barcode</label>
    <type>Checkbox</type>
</CustomField>