force-app/main/default/objects/ISBN__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Select &quot;Trade&quot; for general adult readership</inlineHelpText>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult Education</fullName>
            </value>
            <value>
                <fullName>College Audience</fullName>
            </value>
            <value>
                <fullName>Elementary/High School</fullName>
            </value>
            <value>
                <fullName>English as a Second Language</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Juvenile Audience</fullName>
            </value>
            <value>
                <fullName>Scholarly &amp; Professional</fullName>
            </value>
            <value>
                <fullName>Second Language Teaching</fullName>
            </value>
            <value>
                <fullName>Trade (General Adult)</fullName>
            </value>
            <value>
                <fullName>Young Adult Audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>